# FinanceEscroAIAgent

./: .gitignore  Modelfile  ModlefileGemma  README.md  agent.py  app.py  chat_assistant.py  convert_rag_eval_to_png.py  docker-compose.yml  dockerfile  escro_data_retriever.ipynb  generate_dataset_finetune.ipynb  pyproject.toml  rag.py  rag_eval_results.csv  streamlit_frontend.py
application_llm_eval/: eval_query.txt  main_query.txt  valid_eval_queries_rag.txt
escrow_data/: 1024_17_acounts_information.txt
generated_qa_data/: chunks.json  qa_chunks.json  qa_chunks_with_similar_questions.json  qa_finetuning_dataset.csv
prompt_eval_cloud/: README.md  prompt.json  promptfooconfig.yaml  test.yaml
prompt_eval_local/: README.md  promptfooconfig.yaml  test.yaml
prompts/: prompt_1.txt  prompt_2.txt  prompt_3_for_phi.txt  prompt_main.txt  prompt_short.txt
rag_index_storage/escrow_data/automerging_index/: default__vector_store.json  docstore.json  index_store.json
rag_index_storage/escrow_data/basic_rag/: default__vector_store.json  docstore.json  index_store.json
rag_index_storage/escrow_data/sentence_window/: default__vector_store.json  docstore.json  index_store.json
utility/: utils.py
